--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/MultiverseLearningProducts/Reactive-Weather#readme",
   "dependencies": {
+    "lightningcss": "^1.21.5",
+    "npm": "^9.8.1",
     "parcel": "^2.8.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "process": "^0.11.10"
